@@ -1,21 +1,21 @@
 # English strings for balancing-chemical-equations
 balancing-chemical-equations.name=Balancing Chemical Equations
 
-ammoniaEquationName=Make Ammonia
 balanced=balanced
 balanceScales=Balance Scales
 balancingGame=Balancing Game
 barCharts=Bar Charts
 check=Check
+combustMethane=Combust Methane
 hideMolecules=Hide molecules
 introduction=Introduction
-methaneEquationName=Combust Methane
+makeAmmonia=Make Ammonia
 moleculesAreHidden=molecules are hidden
 next=Next
 none=None
 notBalanced=not balanced
 notSimplified=not simplified
 equation0of1=Equation {0} of {1}:
+separateWater=Separate Water
 showAnswer=Show Answer
 tryAgain=Try Again
-waterEquationName=Separate Water
